:sparkles: Add search bar and make a request

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
 <head>
   <title>Buscador de Wikipedia</title>
-  <script src="./index.js"></script>
+  <script defer src="./index.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
 <body>
-  Content goes here.
+  <label for="search">Buscar artículo en Wikipedia:</label>
+  <input type="search" id="search-input" name="search" />
+  
+  <button id="search-button">Buscar</button>
 </body>
 
 </html>
