--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <input type="search" id="search-input" name="search" />
   <button id="search-button">
     Buscar
-    <svg id="search-button-loader" viewBox="0 0 100 100" width="16" height="16">
+    <!-- <svg id="search-button-loader" viewBox="0 0 100 100" width="16" height="16">
       <use xlink:href="#loader" />
-    </svg>
+    </svg> -->
   </button>
 </body>
 
