:recycle: Separate modules in different files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <title>Buscador de Wikipedia</title>
   <script defer src="./index.js"></script>
+  <script src="./modules/View.js"></script>
+  <script src="./modules/Events.js"></script>
+  <script src="./modules/Queries.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
