:recycle: Rename some stuff

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </button>
     <span id="error-message" class="error-message"></span>
   </div>
-  <div id="article-results"></div>
+  <div id="articles"></div>
     <!-- <svg id="search-button-loader" viewBox="0 0 100 100" width="16" height="16">
       <use xlink:href="#loader" />
     </svg> -->
