:sparkles: Add ability to sort by relevance, date or size

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="./modules/View.js"></script>
   <script src="./modules/Events.js"></script>
   <script src="./modules/Queries.js"></script>
+  <script src="./modules/List.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
@@ -28,6 +29,26 @@
       Buscar
     </button>
     <span id="error-message" class="error-message"></span>
+    <fieldset id="sort-criterion" class="sort-criterion">
+      <legend>Ordenar por:</legend>
+
+      <div class="radio-buttons-container">
+        <div>
+          <input type="radio" name="sort-criterion" id="sort-by-relevance" value="relevance" checked />
+          <label for="sort-by-relevance">Relevancia</label>
+        </div>
+        
+        <div>
+          <input type="radio" name="sort-criterion" id="sort-by-date" value="date" />
+          <label for="sort-by-date">Fecha</label>
+        </div>
+        
+        <div>
+          <input type="radio" name="sort-criterion" id="sort-by-size" value="size" />
+          <label for="sort-by-size">Tamaño</label>
+        </div>
+      </div>
+    </fieldset>
   </div>
   <div id="articles"></div>
     <!-- <svg id="search-button-loader" viewBox="0 0 100 100" width="16" height="16">
